tests/compile_fail/v3_self_outside_method.iron
func bad() -> Self {
    return 0
}

func main() {}
